--- a/src/components/ExploreContainer.css
+++ b/src/components/ExploreContainer.css
@@ -4,7 +4,14 @@
   left: 0;
   right: 0;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
 }
+.container > * {
+  flex: 0 0 auto ;
+} /*  */
 
 .container strong {
   font-size: 20px;
