--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 #root,
 #----e {
    --ion-font-family : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;  
+   font-family: var(--ion-font-family ); 
 }
 
 #root,
