--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,12 @@ p ,
 
 
 #----EXPERIMENTAL--HACK--- {}
+ion-fab ,
+/* fixing the layout-bug in the infrastructural code */
+#-----e {
+   position: fixed ; 
+   bottom: calc((10px + 56px ) ) ;
+}
 .tabs-inner ,
 #----e {
    margin-block-end: -57px ;
