--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,11 @@ p ,
 
 
 #----EXPERIMENTAL--HACK--- {}
+ion-fab ,
+/* fixing the layout-bug in the infrastructural code */
+#-----e {
+   position: fixed ; 
+}
 #root ,
 #-----e {
    --xmda-scrollable-margin-bottom : 56px ;
@@ -65,7 +70,6 @@ p ,
 ion-fab ,
 /* fixing the layout-bug in the infrastructural code */
 #-----e {
-   position: fixed ; 
    bottom: calc((10px + var(--xmda-scrollable-margin-bottom, 0px /* */ ) ) ) ;
 }
 .tabs-inner ,
