``` src/indexb1.tsx src/index.css ```

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,14 @@ del, s,
    text-decoration-thickness: 1ex ;
    user-select: none ;
 }
+.GAvsePairwise-items {
+   display: flex;
+   flex-direction: row;
+}
+.GAvsePairwise > * {
+   resize: horizontal ;
+   flex: 1 1 50% ;
+}
 
 
 
